--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <div id="app"></div>
 <div class="container">
-  <div class="item">item 1</div>
+  <div class="item item1">item 1</div>
   <div class="item">item 2</div>
   <div class="item">item 3</div>
   <div class="item">item 4</div>
