--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <div id="app"></div>
+<!--
 <div class="container">
   <div class="item item1">item 1</div>
   <div class="item">item 2</div>
@@ -6,4 +7,14 @@
   <div class="item">item 4</div>
   <div class="item">item 5</div>
   <div class="item">item 6</div>
+</div>
+-->
+
+<div class="layout">
+  <div class="item header">header</div>
+  <div class="item sidebar">sidebar</div>
+  <div class="item content1">item 1</div>
+  <div class="item content2">item 2</div>
+  <div class="item content3">item 3</div>
+  <div class="item footer">footer</div>
 </div>
