changed header text

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 -->
 
 <div class="layout">
-  <div class="item header">header</div>
+  <div class="item header">headers</div>
   <div class="item sidebar">sidebar</div>
   <div class="item content1">item 1</div>
   <div class="item content2">item 2</div>
